use a non-relative directory for module_utils setting

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,5 @@
 inventory = inventory
 nocows	= True
 library	= ./library:~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
-module_utils = ./module_utils:~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
+#module_utils = ./module_utils:~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
+module_utils = ~/ansible_custom_modules_walkthrough/module_utils
