testing host vars, setting python interpreter and delegate_to

--- a/playbook/emjay.yml
+++ b/playbook/emjay.yml
@@ -1,10 +1,15 @@
 ---
 
 - name: testing modules
-  hosts: all
-  gather_facts: False
+  hosts: test
+  gather_facts: True
   tasks:
+    - name: create user tmp dir
+      file:
+        state: directory
+        path: "{{ ansible_user_dir }}/tmp"
+        mode: 0755
     - name: testing emjay module
       emjay:
         mysetting: "hello"
- 
+      delegate_to: test-02.lunix.lan
