--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,5 @@ inventory = inventory
 nocows	= True
 library	= ./library:~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 module_utils = ./module_utils:~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
+
+remote_user = ubuntu
