testing delegate_to

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 
-inventory = inventory
+inventory = inventory/inventory.static
 nocows	= True
 library	= ./library:~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
 module_utils = ./module_utils:~/.ansible/plugins/module_utils:/usr/share/ansible/plugins/module_utils
-
-remote_user = ubuntu
+remote_user = lunix
+roles_path = ./roles
